--- a/src/app/logindetails/login/login/login.component.css
+++ b/src/app/logindetails/login/login/login.component.css
@@ -1,38 +1,40 @@
-.container h2{
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-    margin-left:-5px;
-  }
-  .container{
-    width: 300px;
-    height: 650px;
-    margin:10vh auto;
-    position: relative;
-  }
-  .container1{
-    width: 300px;
-    height: 650px;
-    margin:10vh auto;
-    position: relative;
-  }
-  .container1 h2{
-    text-align: center;
-    font-size: 20px;
-    text-transform: uppercase;
-    margin-top: -100px;
-  }
-  .container form input, .container form button{
-    display:block;
-    font-size:16px;
-    margin:5px auto;
-  }
-  .container form button{
-    cursor:pointor;
-    padding: 12px 10px;
-    width:60%;
-    text-align:center;
-    border-radius:20px;
-    color:white;
-    background:#0c15bd;
-  }
+.login-container {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  margin-top: 10px;
+}
+
+input, select, button {
+  margin-top: 5px;
+}
+
+.forget-password {
+  color: blue;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+}
