--- a/src/app/logindetails/dashboard/dashboard/dashboard.component.html
+++ b/src/app/logindetails/dashboard/dashboard/dashboard.component.html
@@ -9,3 +9,10 @@
 <app-dashboard-child [res]="data" (event1)="method1($event)"></app-dashboard-child> 
 
 </div>
+
+
+
+
+
+
+<app-footer></app-footer>
