--- a/src/app/logindetails/dashboard/footer/footer.component.css
+++ b/src/app/logindetails/dashboard/footer/footer.component.css
@@ -1,7 +1,7 @@
 footer{
     text-align: center;
     text-decoration: none;
-    background-color: purple;
+    background-color: rgb(68, 13, 68);
     width: 100%;
     margin-top: 450px;
     padding: 10px;
