--- a/src/app/logindetails/dashboard/header/header.component.html
+++ b/src/app/logindetails/dashboard/header/header.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar style="background-color: hsl(331, 59%, 41%);">
+<mat-toolbar style="background-color: rgb(220, 205, 213);">
     
     <a [routerLink]="['/login']" class="primary"> 
-      <img src="https://www.flaticon.com/free-icon/lotus_9832298?related_id=9832298"  class="logo"/></a>
+      <img src="https://www.bing.com/saves?&collId=3&FORM=savim2" class="logo"/></a>
   
     <div class="logo">Logo</div>
     <div class="extra"></div>
@@ -17,7 +17,7 @@
     <mat-icon> <a [routerLink]="['/dashboard/contacts']" class="primary">perm_contact_calendar</a></mat-icon>
     <div class="contacts">Contact Us</div>
 
-    <!--  <mat-icon> <a [routerLink]="['/dashboard/faq']" class="primary">assignment_turned_in</a></mat-icon>
+    <mat-icon> <a [routerLink]="['/dashboard/faq']" class="primary">assignment_turned_in</a></mat-icon>
     <div class="contacts">FAQ</div>
     
     <mat-icon> <a [routerLink]="['/dashboard/country']" class="primary">class</a></mat-icon>
@@ -26,4 +26,4 @@
  <button class="btn" mat-button (click)="openChangePassword()">ChangePassword</button>
    
   </mat-toolbar>
-   -->
+  
