--- a/src/app/logindetails/dashboard/homepage/homepage.component.css
+++ b/src/app/logindetails/dashboard/homepage/homepage.component.css
@@ -30,7 +30,7 @@
            letter-spacing: 2px;
        }
        .list-item a:hover{
-           color:hwb(44 0% 0%);
+           color:rgb(0, 255, 153);
        }
      
 .container2{
