--- a/src/app/logindetails/dashboard/change-password/change-password.component.css
+++ b/src/app/logindetails/dashboard/change-password/change-password.component.css
@@ -3,7 +3,7 @@
 }
 h2{
     text-align: center;
-    background: green;
+    background: hsl(192, 100%, 25%);
 }
 .btn{
     padding: 10px 130px 10px 130px;
